# SchemaPipe

./: Dockerfile  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ae23c7dda2ad_initial_migration.py
src/: main.py  models.py
src/core/: config.py  database.py  models.py  utils.py
src/pipelines/: models.py
src/subscriptions/: models.py
src/users/: models.py
